--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output Information
-        uses: actions/checkout@v2
+        uses: echo "Deploying & Uploading..."
