--- a/.github/workflows/use-reuse.yml
+++ b/.github/workflows/use-reuse.yml
@@ -68,9 +68,18 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: './.github/workflows/reusable.yml'
+    uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
+    # secrets:
+    #   some-secret: ${{ secrets.some-secret }}
+
+  print-deploy-result:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print deploy output
+        run: echo "reuse component output ${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
